[project]
name = "asrkr_crew_test"
version = "0.1.0"
description = "asrkr_crew_test using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.159.0,<1.0.0"
]

[project.scripts]
asrkr_crew_test = "asrkr_crew_test.main:run"
run_crew = "asrkr_crew_test.main:run"
train = "asrkr_crew_test.main:train"
replay = "asrkr_crew_test.main:replay"
test = "asrkr_crew_test.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
